exportar archivos adicionados, modificados y eliminados por commit

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -3377,12 +3377,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b02fb46-cee7-4cad-9130-0977d9eb102c",
+   "id": "ae874618-4e18-4cb9-962b-8228d86603d9",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### LISTAR TODOS LOS ARCHIVOS DE UNA RAMA"
+    "## LISTAR TODOS LOS ARCHIVOS DE UNA RAMA"
    ]
   },
   {
@@ -3416,17 +3416,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8637570-100f-4db5-937c-303f1d8dba27",
+   "id": "35a999b6-85a2-4884-a2ed-1daab263bf98",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### LISTAR TODOS LOS ARCHIVOS EXISTENTES UN COMMIT"
+    "## LISTAR TODOS LOS ARCHIVOS EXISTENTES HASTA UN COMMIT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "id": "f67d5dec-4be7-4a5f-9249-a4c406f5ca48",
    "metadata": {
     "tags": []
@@ -3447,7 +3447,329 @@
     }
    ],
    "source": [
-    "comando = 'git ls-tree -r 6bfbfd4'\n",
+    "comando = f'git ls-tree -r {commit_id}'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af6d5c33-dab4-4975-aa8f-e661353f2492",
+   "metadata": {},
+   "source": [
+    "## LISTA LOS ARCHIVOS NUEVOS ADICIONADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "158a48c3-2832-4703-be7c-ffbb7e954c09",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git log -1 --name-status --diff-filter=A\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "commit 22f98caea84d2e57567a909b444e58f7f6286eb2\n",
+      "Author: jorgecardona <jorgecardona@utp.edu.co>\n",
+      "Date:   Fri May 12 23:38:59 2023 -0500\n",
+      "\n",
+      "    tseteo\n",
+      "\n",
+      "A\t1.txt\n",
+      "A\t2.txt\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git log -1 --name-status --diff-filter=A'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "670efc2e-f49a-4907-bfcf-73f662ec5d41",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=A HEAD~1\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "1.txt\n",
+      "2.txt\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git diff --name-only --diff-filter=A HEAD~1'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "410323e6-3fe4-4040-bf46-1f5756185346",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### CREA UNA LISTA CON LOS ARCHIVOS NUEVOS ADICIONADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "980d8ef6-0cc1-4517-bc6b-838302fe47b6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=A HEAD~1 > nuevos-archivos.txt\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git diff --name-only --diff-filter=A HEAD~1 > nuevos-archivos.txt'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c429d33c-ba1b-4dbb-9360-9cfbc596d00b",
+   "metadata": {},
+   "source": [
+    "## LISTA LOS ARCHIVOS MODIFICADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "0ded6c67-6eb1-4323-b818-a3551f3a48b5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=M HEAD~1\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "requirements.txt\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git diff --name-only --diff-filter=M HEAD~1'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45eeddfd-3ae6-4fe1-9de3-0082f524fbd3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### CREA UNA LISTA CON LOS ARCHIVOS MODIFICADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "8c5d6f3b-87d3-43dc-a771-5c2215c73dbf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=M HEAD~1 > modificados.txt\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git diff --name-only --diff-filter=M HEAD~1 > modificados.txt'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa698ac-756d-44f8-9bd5-db01463d6935",
+   "metadata": {},
+   "source": [
+    "## LISTA LOS ARCHIVOS ELIMINADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "6f82295c-18cc-46dd-ade9-5fb581237fb7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=D HEAD~1\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git diff --name-only --diff-filter=D HEAD~1'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c1638c9-5d88-4c8a-8f94-01c1d125b9ae",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### CREA UNA LISTA CON LOS ARCHIVOS ELIMINADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "2ce054e1-35f5-4651-8553-2596cfeb49b7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=D HEAD~1 > eliminados.txt\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git diff --name-only --diff-filter=D HEAD~1 > eliminados.txt'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61e6717f-89a4-43af-b809-9d14f6640c33",
+   "metadata": {},
+   "source": [
+    "## LISTA LOS ARCHIVOS ADICIONADOS, MODIFICADOS O ELIMINADOS EN UN COMMIT ESPECIFICO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "8972ae02-5187-4dd2-9c4a-3e268d6851a4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git log 6bfbfd4 --name-status --diff-filter=A\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "commit 6bfbfd4a81082e9312caf0a94ba88d975f9db1e9\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Mon Mar 27 22:42:46 2023 -0500\n",
+      "\n",
+      "    adicionado license\n",
+      "\n",
+      "A\tLICENSE\n",
+      "\n",
+      "commit e56280cade6f8f0f6995349582d4e1eaaf07cbdd\n",
+      "Author: PARADIGMA\\QiDimMak <jorgecardona@utp.edu.co>\n",
+      "Date:   Mon Mar 27 22:42:26 2023 -0500\n",
+      "\n",
+      "    adicionado .gitignore\n",
+      "\n",
+      "A\t.gitignore\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "commit_id = '6bfbfd4'\n",
+    "comando = f'git log {commit_id} --name-status --diff-filter=AMD'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad6dbb4-5f9b-416f-81b8-bcfdb2cdd02e",
+   "metadata": {},
+   "source": [
+    "### CREA UNA LISTA CON LOS ARCHIVOS ADICIONADOS, MODIFICADOS Y ELIMINADOS EN EL ULTIMO COMMIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "a56aa22e-8e28-4bfe-844c-f15e9d2164c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git diff --name-only --diff-filter=AMD HEAD~1 > nuevos-modificados-eliminados.txt\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando ='git diff --name-only --diff-filter=AMD HEAD~1 > nuevos-modificados-eliminados.txt'\n",
     "ejecutar_comando_git(comando)"
    ]
   },
@@ -5418,7 +5740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "id": "fdabb678-87be-4e49-8834-ecc992a95d34",
    "metadata": {
     "scrolled": true,
@@ -5432,6 +5754,7 @@
       "############################################# COMANDO A EJECUTAR #############################################\n",
       "git log --oneline\n",
       "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "2bf3bc1 ficherios exportados\n",
       "c0925c2 adicionado usuario\n",
       "d481740 adicionado requirements.txt\n",
       "fd01bde adicionado readme\n",
@@ -5474,6 +5797,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a16a0d72-28dc-4a64-9e94-bb2c54f6c933",
+   "metadata": {},
+   "source": [
+    "## EXPORTAR MULTIPLES COMMITS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9b3c4e4b-bc9b-4a59-9772-cc039086c5fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git archive --format=zip 6bfbfd4> ./exportados/multiples_commit.zip\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = f'git archive --format=zip 6bfbfd4> {directorio_exportados}/multiples_commit.zip'\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5643e87a-0846-4b07-a89b-435cb3160d09",
    "metadata": {},
    "source": [
@@ -5492,7 +5848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "id": "6830c2ad-626c-48a1-ab26-d211c98e28f0",
    "metadata": {
     "tags": []
@@ -5503,29 +5859,58 @@
      "output_type": "stream",
      "text": [
       "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git ls-files\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      ".gitignore\n",
+      "LICENSE\n",
+      "README.md\n",
+      "exportados/archivos_seleccionados.zip\n",
+      "exportados/commit.zip\n",
+      "exportados/latest.zip\n",
+      "exportados/main.zip\n",
+      "exportados/multiples_commit.zip\n",
+      "requirements.txt\n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
       "git ls-tree -r main\n",
       "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
       "100644 blob b6e47617de110dea7ca47e087ff1347cc2646eda\t.gitignore\n",
       "100644 blob f288702d2fa16d3cdf0035b15a9fcbc552cd88e7\tLICENSE\n",
       "100644 blob 8c15f8a8149b4e71592b4884c1ea7a97fa605b2e\tREADME.md\n",
+      "100644 blob 4025d5fb804bcf031a6342ea37ee3e8b6b871e84\texportados/archivos_seleccionados.zip\n",
+      "100644 blob c323fce22d39f0e41ac8f179e142f7933eca0caf\texportados/commit.zip\n",
+      "100644 blob 71bebcf1f1f21efb76d9bfd2e3f0a57d017cf672\texportados/latest.zip\n",
+      "100644 blob 71bebcf1f1f21efb76d9bfd2e3f0a57d017cf672\texportados/main.zip\n",
+      "100644 blob c323fce22d39f0e41ac8f179e142f7933eca0caf\texportados/multiples_commit.zip\n",
       "100644 blob 8fefd45effa4056eeac8b1de724f2ab015cf79de\trequirements.txt\n",
       "##############################################################################################################\n",
       "\n",
       "############################################# COMANDO A EJECUTAR #############################################\n",
-      "git ls-tree -r 6bfbfd4\n",
+      "git ls-tree -r 2bf3bc1\n",
       "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
       "100644 blob b6e47617de110dea7ca47e087ff1347cc2646eda\t.gitignore\n",
       "100644 blob f288702d2fa16d3cdf0035b15a9fcbc552cd88e7\tLICENSE\n",
+      "100644 blob 8c15f8a8149b4e71592b4884c1ea7a97fa605b2e\tREADME.md\n",
+      "100644 blob 4025d5fb804bcf031a6342ea37ee3e8b6b871e84\texportados/archivos_seleccionados.zip\n",
+      "100644 blob c323fce22d39f0e41ac8f179e142f7933eca0caf\texportados/commit.zip\n",
+      "100644 blob 71bebcf1f1f21efb76d9bfd2e3f0a57d017cf672\texportados/latest.zip\n",
+      "100644 blob 71bebcf1f1f21efb76d9bfd2e3f0a57d017cf672\texportados/main.zip\n",
+      "100644 blob c323fce22d39f0e41ac8f179e142f7933eca0caf\texportados/multiples_commit.zip\n",
+      "100644 blob 8fefd45effa4056eeac8b1de724f2ab015cf79de\trequirements.txt\n",
       "##############################################################################################################\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "comando = 'git ls-files'\n",
+    "ejecutar_comando_git(comando)\n",
+    "\n",
     "comando = 'git ls-tree -r main'\n",
     "ejecutar_comando_git(comando)\n",
     "\n",
-    "comando = 'git ls-tree -r 6bfbfd4'\n",
+    "comando = 'git ls-tree -r 2bf3bc1'\n",
     "ejecutar_comando_git(comando)"
    ]
   },
@@ -5560,6 +5945,86 @@
    "source": [
     "comando = f'git archive --format=zip main requirements.txt LICENSE > {directorio_exportados}/archivos_seleccionados.zip'\n",
     "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e683ec8e-2d4c-4807-853e-db453b39bdc3",
+   "metadata": {},
+   "source": [
+    "# **EXPORTAR LOS ARCHIVOS NUEVOS, MODIFICADOS O ELIMINADOS EN EL ULTIMO COMMIT O UN COMMIT ESPECIFICO USANDO RANGO DE COMMITS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0be62929-6da6-4491-8572-d3e7e9f85989",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# **WINDOWS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bad065b4-dbcf-4ee7-b543-ccc573d07405",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# ARCHIVOS ADICIONADOS **A**\n",
+    "### git diff --name-only --diff-filter=A HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force\n",
+    "\n",
+    "# ARCHIVOS MODIFICADOS **M**\n",
+    "### git diff --name-only --diff-filter=M HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force\n",
+    "\n",
+    "# ARCHIVOS ELIMINADOS **D**\n",
+    "### git diff --name-only --diff-filter=D HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78ed31ed-b668-469b-8298-017e1ed5b5cd",
+   "metadata": {},
+   "source": [
+    "# USANDO RANGO DE COMMITS\n",
+    "### git diff --name-only --diff-filter=A **commit_id_1 commit_id_3** | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69d80810-e382-4d47-9f2a-db8111277a44",
+   "metadata": {},
+   "source": [
+    "# **LINUX**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4e92cfa-c197-411a-8a9d-baae050360ee",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## git diff --name-only --diff-filter=A HEAD~1 HEAD | xargs zip nuevos-archivos.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dade0aa1-8564-4642-8873-64646b14d9a6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# **MAC OS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6433c6d9-e9b9-4002-a795-898e08bfebe0",
+   "metadata": {},
+   "source": [
+    "## git diff --name-only --diff-filter=A HEAD~1 HEAD | zip nuevos-archivos.zip -@"
    ]
   },
   {
