exportar archivos adicionados, modificados y eliminados por commit actualizado directorio

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -5973,13 +5973,13 @@
    },
    "source": [
     "# ARCHIVOS ADICIONADOS **A**\n",
-    "### git diff --name-only --diff-filter=A HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force\n",
+    "### git diff --name-only --diff-filter=A HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath  exportados/nuevos-archivos.zip -Force\n",
     "\n",
     "# ARCHIVOS MODIFICADOS **M**\n",
-    "### git diff --name-only --diff-filter=M HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force\n",
+    "### git diff --name-only --diff-filter=M HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath  exportados/nuevos-archivos.zip -Force\n",
     "\n",
     "# ARCHIVOS ELIMINADOS **D**\n",
-    "### git diff --name-only --diff-filter=D HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force"
+    "### git diff --name-only --diff-filter=D HEAD~1 HEAD | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath  exportados/nuevos-archivos.zip -Force"
    ]
   },
   {
@@ -5988,7 +5988,7 @@
    "metadata": {},
    "source": [
     "# USANDO RANGO DE COMMITS\n",
-    "### git diff --name-only --diff-filter=A **commit_id_1 commit_id_3** | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath nuevos-archivos.zip -Force"
+    "### git diff --name-only --diff-filter=A **commit_id_1 commit_id_3** | ForEach-Object {Resolve-Path $_.ToString()} | Compress-Archive -DestinationPath  exportados/nuevos-archivos.zip -Force"
    ]
   },
   {
