adcionado nuevos comentarios git stash

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -2636,7 +2636,8 @@
    "source": [
     "### <center> GIT STASH\n",
     "### GUARDA ARCHIVOS TEMPORALES Y **OCULTA LA VERSION LOS ARCHIVOS**, MIENTRAS SE PASA A OTRA RAMA\n",
-    "### O SIMPLEMENTE PARA TENER VARIAS VERSIONES DE UN ARCHIVO Y RECUPERARLO LUEGO, SE DEBE USAR *git add archivo*"
+    "### O SIMPLEMENTE PARA TENER VARIAS VERSIONES DE UN ARCHIVO Y RECUPERARLO LUEGO, SE DEBE USAR *git add archivo*\n",
+    "### TAMBIEN ALMACENAMIENTO EN LOCAL DE ARCHIVOS IGNORADOS Y SIN SEGUIMEINTO"
    ]
   },
   {
