--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -5320,6 +5320,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad6ecee6-e2dd-4ecd-88d8-f0e70554ab90",
+   "metadata": {},
+   "source": [
+    "## GIT MERGE vs GIT PULL --REBASE\n",
+    "<center>\n",
+    "    <img width=\"75%\" align=\"center\" src=\"recursos/imagenes/merge_vs_rebase.jpeg\">\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bf4514c-76b2-4b19-af5e-0140bb4ead9b",
+   "metadata": {},
+   "source": [
+    "| **Comando**             | **Descripción**                                                                                                        | **Ventajas**                                                                                                             | **Desventajas**                                                                                                      | **Cuándo Usarlo**                                                                                                   | **Ejemplo**                                                  |\n",
+    "|-------------------------|------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------|\n",
+    "| **`git merge`**         | Combina cambios de una rama local en otra rama local, preservando el historial de commits y creando un nuevo commit de merge.           | - Fácil de usar<br>- Mantiene el contexto completo de la integración<br>- No modifica la historia de commits existente  | - Puede hacer que la historia sea más compleja con merge commits<br>- Historia no lineal                             | - Cuando deseas preservar el contexto completo de la integración<br>- Para integraciones simples sin necesidad de una historia lineal | `git merge feature-branch`                                  |\n",
+    "| **`git rebase`**        | Aplica los commits de una rama local sobre otra rama local base, creando una nueva secuencia de commits.                                | - Mantiene una historia de commits limpia y lineal<br>- Facilita la revisión de cambios y la colaboración                | - Puede ser complejo en caso de conflictos<br>- Reescribe la historia, lo que puede ser problemático si ya has compartido los commits | - Para mantener una historia de commits lineal<br>- Antes de compartir tus cambios con otros desarrolladores        | `git rebase main`                                           |\n",
+    "| **`git pull --rebase`** | Combina fetch y rebase en un solo paso, descargando los cambios remotos y aplicando los commits locales sobre ellos.    | - Combina fetch y rebase en un solo paso<br>- Mantiene una historia lineal y limpia<br>- Simplifica el flujo de trabajo  | - Puede ser más tedioso resolver conflictos durante el rebase                                                        | - Al integrar cambios remotos y quieres mantener una historia lineal<br>- Para colaborar eficientemente en equipo   | `git pull --rebase origin main`                             |\n",
+    "| **`git rebase --continue`** | Continúa un rebase pausado después de resolver conflictos de los contenidos entre la rama local y la remota que se descargo, aplicando los cambios restantes.                             | - Permite continuar un rebase pausado después de resolver conflictos entre las ramas locales<br>- Mantiene la linealidad de la historia           | - Solo se usa en el contexto de un rebase pausado por conflictos<br>- Requiere resolver manualmente los conflictos antes de continuar | - Después de usar `git pull --rebase` o `git rebase` y resolver conflictos<br>- Para finalizar un rebase en curso    | `git rebase --continue`                                     |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "708c0fc6-1c94-4bd3-b237-c336fdc408ae",
    "metadata": {},
    "source": [
@@ -5967,7 +5991,17 @@
    "id": "117de75b-66c8-4187-a4e2-71e99b3d8b61",
    "metadata": {},
    "source": [
-    "# <center> LISTAR ARCHIVOS DE UNA RAMA O DE UN COMMIT <br>https://github.com/JorgeCardona/comandos_git</br> </center>"
+    "# <center> LISTAR ARCHIVOS DE UNA RAMA O DE UN COMMIT <br>https://github.com/JorgeCardona/comandos_git</br> </center>\n",
+    "\n",
+    "## <center> git status vs git status -s vs git status -b vs git status -uno vs git status --ignored\n",
+    "\n",
+    "| **Comando**             | **Descripción**                                                                                                            | **Cuándo Usarlo**                                                                                                     | **Detalles**                                                                                                             |\n",
+    "|-------------------------|----------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------|\n",
+    "| **`git status`**        | Muestra el estado actual del repositorio, incluyendo archivos modificados, agregados y eliminados.                       | - Para obtener una visión detallada de los cambios en el repositorio.<br>- Para verificar la rama actual y los cambios listos para confirmar.                                | Proporciona información detallada sobre el estado del repositorio, incluyendo archivos modificados, agregados y eliminados, así como la rama actual y el estado de los cambios. |\n",
+    "| **`git status -s`**    | Muestra un resumen corto y simplificado del estado del repositorio, mostrando solo las rutas de los archivos y sus estados. | - Cuando se necesita una visión rápida y concisa del estado de los archivos sin detalles adicionales.                            | - **M**: Archivo modificado desde el último commit.<br>- **A**: Nuevo archivo agregado al área de preparación.<br>- **D**: Archivo eliminado desde el último commit.<br>- **R**: Archivo renombrado.<br>- **C**: Archivo copiado.<br>- **U**: Archivo con conflictos de fusión.<br>- **??**: Archivo desconocido para Git, es decir, no está bajo seguimiento. |\n",
+    "| **`git status -b`**     | Muestra información adicional sobre la rama actual y su estado en relación con la rama remota.                             | - Para verificar el estado de la rama actual y si está sincronizada con la rama remota.                                  | Proporciona información adicional sobre la rama actual y su estado en relación con la rama remota, incluyendo si está sincronizada o no. |\n",
+    "| **`git status -uno`**   | Muestra solo los cambios en las subcarpetas y archivos no rastreados en el directorio de trabajo, omitiendo los cambios en los archivos ignorados.     | - Cuando solo deseas ver los cambios en los archivos no rastreados y omitir los cambios en archivos ignorados.       | Muestra solo los cambios en las subcarpetas y archivos no rastreados en el directorio de trabajo, omitiendo los cambios en los archivos ignorados, lo que facilita la visualización de los cambios relevantes. |\n",
+    "| **`git status --ignored`** | Muestra una lista de archivos que están siendo ignorados por Git en el directorio de trabajo.                                | - Para verificar que los archivos que deseas ignorar están siendo correctamente ignorados por Git.                   | Muestra una lista de archivos que están siendo ignorados por Git en el directorio de trabajo, útil para verificar que los archivos no deseados estén siendo ignorados correctamente. |"
    ]
   },
   {
@@ -8491,7 +8525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
